[gd_scene load_steps=7 format=2]

[ext_resource path="res://textures/shutdown.png" type="Texture" id=1]
[ext_resource path="res://textures/reboot.png" type="Texture" id=2]
[ext_resource path="res://src/main.gd" type="Script" id=3]
[ext_resource path="res://textures/back.png" type="Texture" id=4]
[ext_resource path="res://textures/white.png" type="Texture" id=5]
[ext_resource path="res://textures/logout.png" type="Texture" id=6]

[node name="main" type="Node2D"]
position = Vector2( 0, -80 )
script = ExtResource( 3 )

[node name="white" type="Sprite" parent="."]
position = Vector2( 256.179, 249.812 )
scale = Vector2( 1.11771, 1.11771 )
texture = ExtResource( 5 )

[node name="reboot" type="TouchScreenButton" parent="."]
position = Vector2( 24, 160 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 2 )

[node name="shutdown" type="TouchScreenButton" parent="."]
position = Vector2( 184, 160 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 1 )

[node name="logout" type="TouchScreenButton" parent="."]
position = Vector2( 352, 160 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 6 )

[node name="back" type="TouchScreenButton" parent="."]
position = Vector2( 0, 80 )
scale = Vector2( 0.125, 0.125 )
normal = ExtResource( 4 )

[connection signal="pressed" from="reboot" to="." method="_on_reboot_pressed"]
[connection signal="pressed" from="shutdown" to="." method="_on_shutdown_pressed"]
[connection signal="pressed" from="logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
